<resources>
    <string name="app_name">Calculator</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="modulo">Modulo</string>
    <string name="div">Division</string>
    <string name="mul">Multiplication</string>
    <string name="sub">Subtraction</string>
    <string name="add">Addition</string>
    <string name="ac">AC</string>
    <string name="sign_mod">%</string>
    <string name="sign_div">/</string>
    <string name="sign_mul">*</string>
    <string name="sign_min">-</string>
    <string name="sign_add">+</string>
    <string name="zero">0</string>
    <string name="deci">.</string>
    <string name="equal">=</string>
    <string name="neg">-/+</string>
    <string name="negative">Negative</string>
</resources>
